--- a/styles/scss/layout/_spacing.scss
+++ b/styles/scss/layout/_spacing.scss
@@ -25,6 +25,11 @@
 .min-w-200p { min-width: 200px; }
 .min-w-250p { min-width: 250px; }
 .min-w-300p { min-width: 300px; }
+.min-w-400p { min-width: 400px; }
+.min-w-500p { min-width: 500px; }
+.min-w-600p { min-width: 600px; }
+.min-w-700p { min-width: 700px; }
+.min-w-800p { min-width: 800px; }
 
 //max pixel widths
 .max-w-30p { max-width: 30px; }
@@ -36,12 +41,25 @@
 .max-w-300p { max-width: 300px; }
 
 
-// heights
+//max heights
 .max-h-110p { max-height: 110px; }
 .max-h-150p { max-height: 150px; }
 .max-h-180p { max-height: 180px; }
 .max-h-250p { max-height: 250px; }
 .max-h-300p { max-height: 300px; }
+
+//min heights
+
+.min-h-100p { min-height: 100px; }
+.min-h-150p { min-height: 150px; }
+.min-h-200p { min-height: 200px; }
+.min-h-250p { min-height: 250px; }
+.min-h-300p { min-height: 300px; }
+.min-h-400p { min-height: 400px; }
+.min-h-500p { min-height: 500px; }
+.min-h-600p { min-height: 600px; }
+.min-h-700p { min-height: 700px; }
+.min-h-800p { min-height: 800px; }
 
 .h-100 { height: 100%; }
 
