--- a/styles/twdu.css
+++ b/styles/twdu.css
@@ -757,6 +757,26 @@ button,
   min-width: 300px;
 }
 
+.min-w-400p {
+  min-width: 400px;
+}
+
+.min-w-500p {
+  min-width: 500px;
+}
+
+.min-w-600p {
+  min-width: 600px;
+}
+
+.min-w-700p {
+  min-width: 700px;
+}
+
+.min-w-800p {
+  min-width: 800px;
+}
+
 .max-w-30p {
   max-width: 30px;
 }
@@ -803,6 +823,46 @@ button,
 
 .max-h-300p {
   max-height: 300px;
+}
+
+.min-h-100p {
+  min-height: 100px;
+}
+
+.min-h-150p {
+  min-height: 150px;
+}
+
+.min-h-200p {
+  min-height: 200px;
+}
+
+.min-h-250p {
+  min-height: 250px;
+}
+
+.min-h-300p {
+  min-height: 300px;
+}
+
+.min-h-400p {
+  min-height: 400px;
+}
+
+.min-h-500p {
+  min-height: 500px;
+}
+
+.min-h-600p {
+  min-height: 600px;
+}
+
+.min-h-700p {
+  min-height: 700px;
+}
+
+.min-h-800p {
+  min-height: 800px;
 }
 
 .h-100 {
@@ -1010,13 +1070,12 @@ button,
 }
 
 .app.sheet .editor {
-  min-height: 55px;
-  height: 100%;
+  min-height: 100px;
 }
 
 .editor-content {
   padding: 0.5rem;
-  min-height: 50px;
+  min-height: 100px;
 }
 
 .dice-roll .dice-formula,
